--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "match-sorter": "^4.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react-dom": "^16.8.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
